--- a/src/app/game-list/game-list.component.html
+++ b/src/app/game-list/game-list.component.html
@@ -1,4 +1,4 @@
-<table class="table">
+<table class="table table-striped">
     <thead>
         <tr>
             <th></th>
@@ -6,6 +6,7 @@
             <th>Desarrollador</th>
             <th>Precio</th>
             <th>Stock</th>
+            <th>Compra</th>
         </tr>
         <tr *ngFor="let game of games" [ngClass]="{'enOferta' : game.oferta}">
             <td><img [src]="game.image" [alt]="game.nombre"></td>
@@ -14,6 +15,9 @@
             <td>{{game.precio | currency}}</td>
             <td><span class="badge text-bg-warning" *ngIf="game.stock == 0">Sin Stock</span></td>
             <td><span class="badge text-bg-success" *ngIf="game.oferta == true">En Oferta</span></td>
+            <td><button class="btn btn-outline-dark" (click)="upQuantity(game)">+</button>
+                <input type="text" [(ngModel)]="game.cantidad">
+                <button class="btn btn-outline-dark" (click)="downQuantity(game)">-</button></td>
 
             
         </tr>
