--- a/src/app/input-number/input-number.component.html
+++ b/src/app/input-number/input-number.component.html
@@ -1,3 +1,3 @@
-<button class="btn btn-outline-dark" (click)="upQuantity(game)">+</button>
-    <input type="text" [(ngModel)]="game.cantidad">
-<button class="btn btn-outline-dark" (click)="downQuantity(game)">-</button>
+<button class="btn btn-outline-dark" (click)="upQuantity()">+</button>
+    <input type="text" [(ngModel)]="quantity">
+<button class="btn btn-outline-dark" (click)="downQuantity()">-</button>
