--- a/src/app/game-master-about/game-master-about.component.html
+++ b/src/app/game-master-about/game-master-about.component.html
@@ -1,1 +1,23 @@
-<p>game-master-about works!</p>
+<h1>Formulario de Contacto</h1>
+<div id="form-main">
+    <div id="form-div">
+      <form class="form" id="form1">
+        
+        <p class="name">
+          <input name="name" type="text" class="validate[required,custom[onlyLetter],length[0,100]] feedback-input" placeholder="Nombre" id="name" />
+        </p>
+        
+        <p class="email">
+          <input name="email" type="text" class="validate[required,custom[email]] feedback-input" id="email" placeholder="Email" />
+        </p>
+        
+        <p class="text">
+          <textarea name="text" class="validate[required,length[6,300]] feedback-input" id="comment" placeholder="Comentario"></textarea>
+        </p>
+        
+        <div class="submit">
+          <input type="submit" value="SEND" id="button-blue"/>
+          <div class="ease"></div>
+        </div>
+      </form>
+    </div>
