--- a/src/app/input-number/input-number.component.html
+++ b/src/app/input-number/input-number.component.html
@@ -1,3 +1,5 @@
-<button class="btn btn-outline-dark" (click)="upQuantity()">+</button>
-    <input type="text" [(ngModel)]="quantity">
-<button class="btn btn-outline-dark" (click)="downQuantity()">-</button>
+<div class="input-group mb-3">
+    <button class="btn btn-outline-secondary" type="button" (click)="downQuantity()">-</button>
+    <button class="btn btn-outline-secondary" type="button" (click)="upQuantity()">+</button>
+    <input type="text" class="form-control" [(ngModel)]="quantity">
+</div>
